Resolves: tdf#86017 calc has more rows than writer tables can support

as things stand right now in writer if the table doesn't fit it
doesn't fit and don't try

Change-Id: I90cea4c8566460f614d9a1143a638597d5ab8ce6