sw/source/uibase/dochdl/swdtflvr.cxx
@@ -2168,6 +2168,14 @@ bool SwTransferable::_PasteDDE( TransferableDataHelper& rData,
                 sTmp = sTmp.getToken( 0, '\n' );
                 sal_Int32 nCols = comphelper::string::getTokenCount(sTmp, '\t');
 
+                if (nRows > USHRT_MAX || nCols > USHRT_MAX)
+                {
+                    if( bMsg )
+                        ScopedVclPtrInstance<MessageDialog>::Create(nullptr, SW_RESSTR(STR_TABLE_TOO_LARGE), VCL_MESSAGE_INFO)->Execute();
+                    pDDETyp = 0;
+                    break;
+                }
+
                 // at least one column & row must be there
                 if( !nRows || !nCols )
                 {
